@@ -7,6 +7,7 @@
 	* Far look during hallucination should be more amusing
 	* Assorted YAFMs 1.0 by Adam Borowski ( http://bilious.alt.org/?121 ), slightly modified
 	* Cursed musical instruments will work only in 50% of cases, blessed ones are more effective
+	* Wands and Gain Ability 0.1 by Grunt ( http://bilious.alt.org/?250 )
 
 2012-04-01  UnNetHack 4.0.0
 	* Uncursed and blessed scrolls of magic mapping reveal secret doors
